--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ axum = "0.7.9"
 image = "0.25.5"
 mpl-token-metadata = "5.1.0"
 reqwest = "0.12.9"
+rusqlite = { version = "0.32.1", features = ["bundled"] }
 serde = { version = "1.0.215", features = ["derive"] }
 serde_json = "1.0.133"
 solana-account-decoder = "2.1.2"
