--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ anyhow = "1.0.93"
 axum = "0.7.9"
 image = "0.25.5"
 mpl-token-metadata = "5.1.0"
+r2d2 = "0.8.10"
+r2d2_sqlite = "0.25.0"
 reqwest = "0.12.9"
 rusqlite = { version = "0.32.1", features = ["bundled"] }
 serde = { version = "1.0.215", features = ["derive"] }
