--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,6 @@
 postgres:
-  url: "localhost"
-  user: "myuser"
-  password: "mypassword"
+  host: "localhost"
+  port: 5432
+  user: "trade_user"
+  password: "password_trade_123"
+  database: "trade_with_me"
