--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,12 +5,13 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.93"
-axum = "0.7.9"
+axum = { version = "0.7.9", features = ["ws"] }
 base64 = "0.22.1"
 chrono = { version = "0.4.38", features = ["serde"] }
 diesel = { version = "2.2.5", features = ["postgres", "r2d2", "serde_json"] }
 env_logger = "0.11.5"
 figment = { version = "0.10.19", features = ["yaml"] }
+futures = "0.3.31"
 image = "0.25.5"
 log = "0.4.22"
 mpl-token-metadata = "5.1.0"
@@ -22,4 +23,5 @@ solana-account-decoder = "2.1.2"
 solana-client = "2.1.2"
 solana-sdk = "2.1.2"
 tokio = { version = "1.41.1", features = ["full"] }
-uuid = { version = "1.11.0", features = ["serde"] }
+tokio-stream = { version = "0.1.16", features = ["sync"] }
+uuid = { version = "1.11.0", features = ["serde", "v4"] }
