--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ anyhow = "1.0.93"
 axum = { version = "0.7.9", features = ["ws"] }
 base64 = "0.22.1"
 chrono = { version = "0.4.38", features = ["serde"] }
-diesel = { version = "2.2.5", features = ["postgres", "r2d2", "serde_json"] }
+diesel = { version = "2.2.5", features = ["postgres", "r2d2", "serde_json", "uuid"] }
 env_logger = "0.11.5"
 figment = { version = "0.10.19", features = ["yaml"] }
 futures = "0.3.31"
