--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,5 +24,6 @@ solana-client = "2.1.2"
 solana-sdk = "2.1.2"
 tokio = { version = "1.41.1", features = ["full"] }
 tokio-stream = { version = "0.1.16", features = ["sync"] }
+tokio-tungstenite = "0.26.1"
 tower-http = { version = "0.6.2", features = ["cors"] }
 uuid = { version = "1.11.0", features = ["serde", "v4"] }
