--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ figment = { version = "0.10.19", features = ["yaml"] }
 futures = "0.3.31"
 image = "0.25.5"
 log = "0.4.22"
+lru_time_cache = "0.11.11"
 mpl-token-metadata = "5.1.0"
 r2d2 = "0.8.10"
 reqwest = "0.12.9"
