--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ serde_json = "1.0.133"
 solana-account-decoder = "2.1.2"
 solana-client = "2.1.2"
 solana-sdk = "2.1.2"
+spl-associated-token-account = "6.0.0"
 strum = "0.26.3"
 strum_macros = "0.26.4"
 tokio = { version = "1.41.1", features = ["full"] }
